Explicitly increase both CPU and memory limits on the prefect job the agent creates

--- a/src/prefect/agent/kubernetes/job_spec.yaml
+++ b/src/prefect/agent/kubernetes/job_spec.yaml
@@ -39,9 +39,10 @@ spec:
               value: "prefect.engine.cloud.CloudTaskRunner"
           resources:
             requests:
-              cpu: "100m"
+              cpu: "700m"
             limits:
-              cpu: "100m"
+              cpu: "700m"
+              memory: "1Gi"
       restartPolicy: Never
       imagePullSecrets:
       - name: ""
